HEAD
	+ Backup/restore s4sync timestamp
	+ Disabled nmbd logging
3.2.20
	+ Improve save changes speed avoiding loop in postServiceHook if no changes
	  made to roaming profiles
3.2.19
	+ Setup roaming profiles for each user only when the setting changes
	  in the UI
3.2.18
	+ EBox::Samba::DNS::Zone always return lowercase zone name
3.2.17
	+ Fix members of 'Domain Admins' group not able to delete items from
	  recycle bin
	+ s4sync: Remove the group share if exists after deleting the group itself
	+ s4sync: Remove the deleted user or group from shares ACLs
3.2.16
	+ Grant rwx rights to Domain guest and Everybody on guest shares
3.2.15
	+ Remove the use of method canonicalName for greater performance, use
	  object DNs instead
	+ s4sync is stopped before samba daemon to prevent ldb connection errors
	+ s4sync run timestamp is saved only if it doesn't break with an error at
	  the end of the work loop
	+ Fixed setting of printers permissions
	+ s4sync: Check samba daemon is running
	+ Removed obsolete dns-$hostname account from OpenLDAP, it should be only
	  available in Samba
	+ Ignored and logged as errors the users, contacts and groups in OpenLDAP
	  that are not linked with Samba objects
	+ Fix delete GPLink: use gPLink attribute name as our checkers are
	  case sensitive
	+ Set allow_non_scanned_files = True on samba.conf by default to
	  avoid issues with antivirus when editing files
	+ EBox::Samba::LdbObject::setCritical cannot use lazy flag to work
	  correctly
3.2.14
	+ Fix NT_STATUS_ACCESS_DENIED opening files quering the DOS attributes
	  and passing them to open function
	+ Set OpenChange as not provisioned when Samba is reprovisioned
	+ Added a way to check whether we are managing the AD schema or not
	+ Samba provision failures when IPs are not set no longer talk
	  wrongly about internal interfaces
	+ Create directories in _setConf to avoid invalid group __USERS__ error
	+ Clean up openchange section in stub smb.conf file