@@ -28,6 +28,7 @@ use base qw(EBox::Module::Service
 
 use EBox::Config;
 use EBox::Exceptions::Internal;
+use EBox::Exceptions::External;
 use EBox::Exceptions::InvalidType;
 use EBox::Exceptions::MissingArgument;
 use EBox::Exceptions::UnwillingToPerform;
@@ -340,6 +341,7 @@ sub _postServiceHook
         my $writeRights = SEC_RIGHTS_FILE_WRITE | SEC_STD_DELETE;
         my $adminRights = SEC_STD_ALL | SEC_RIGHTS_FILE_ALL;
         my $defaultInheritance = SEC_ACE_FLAG_CONTAINER_INHERIT | SEC_ACE_FLAG_OBJECT_INHERIT;
+        my $setDescriptorError;
         for my $id (@{$sambaShares->ids()}) {
             my $row = $sambaShares->row($id);
             my $enabled     = $row->valueByName('enabled');
@@ -464,8 +466,17 @@ sub _postServiceHook
                              FILE_ATTRIBUTE_HIDDEN |
                              FILE_ATTRIBUTE_READONLY |
                              FILE_ATTRIBUTE_SYSTEM;
-            EBox::debug("Setting NT ACL on file: $relativeSharePath");
-            $smb->set_sd($relativeSharePath, $sd, $sinfo, $access_mask);
+
+            try {
+                EBox::debug("Setting NT ACL on share $shareName");
+                $smb->set_sd($relativeSharePath, $sd, $sinfo, $access_mask);
+            } otherwise {
+                my ($ex) = @_;
+                EBox::error(__x("Error setting security descriptor on share '{x}': {y}",
+                    x => $shareName, y => $ex));
+                $setDescriptorError = 1;
+            };
+
             # Apply recursively the permissions.
             my $shareContentList = $smb->list($relativeSharePath,
                 attributes => $attributes, recursive => 1);
@@ -476,8 +487,15 @@ sub _postServiceHook
             foreach my $item (@{$shareContentList}) {
                 my $itemName = $item->{name};
                 $itemName =~ s/^\/\/(.*)/\/$1/s;
-                EBox::debug("Setting NT ACL on file: $itemName");
-                $smb->set_sd($itemName, $sd, $sinfo, $access_mask);
+                try {
+                    EBox::debug("Setting NT ACL on $shareName/$itemName");
+                    $smb->set_sd($itemName, $sd, $sinfo, $access_mask);
+                } otherwise {
+                    my ($ex) = @_;
+                    EBox::error(__x("Error setting security descriptor on file {x}{y}: {z}",
+                        x => $shareName, y => $itemName, z => $ex));
+                    $setDescriptorError = 1;
+                };
             }
             delete $state->{shares_set_rights}->{$shareName};
             $self->set_state($state);
@@ -492,6 +510,13 @@ sub _postServiceHook
         # Write DNS update list
         EBox::info("Writing DNS update list...");
         $self->_writeDnsUpdateList();
+
+        # Throw exception if errors setting NT ACLs
+        if ($setDescriptorError) {
+            throw EBox::Exceptions::External(
+                __("There were errors setting ACLs on shares, " .
+                   "please check the zentyal log."));
+        }
     } else {
         EBox::debug("Ignoring Samba's _postServiceHook code because it was not invoked from the web application.");
     }
